app/assets/stylesheets/govuk-frontend/overrides.scss
// Overrides for certain GOV.UK Frontend styles to make its components match this application's design

$notify-secondary-button-colour: govuk-shade(govuk-colour("light-grey"), 7%);
$notify-secondary-button-hover-colour: govuk-shade(govuk-colour("light-grey"), 18%);

// adjusted link colour on grey to satisfy WCAG criterion
// on govuk-shade(govuk-colour("light-grey"), 7%) this
// now has a contrast ratio of 5.67
// this HEX is lighter than $govuk-link-hover-colour
$link-colour-on-grey-background: #1852ab;

// Additional padding-bottom override, following the GOV.UK Frontend spacing scale:
// https://design-system.service.gov.uk/styles/spacing/#the-responsive-spacing-scale
.govuk-\!-padding-bottom-12 {
  padding-bottom: 70px !important; /* stylelint-disable-line declaration-no-important */

  @include govuk-media-query($from: tablet) {
    padding-bottom: 90px !important; /* stylelint-disable-line declaration-no-important */
  }
}

// Make column headings smaller to prevent wrapping
.govuk-footer__heading {
  @include govuk-font($size: 19, $weight: bold);
}

.govuk-button {
  margin-bottom: 0px;
}

// Allow legends that contain the h1 to go full width
.govuk-fieldset__legend.govuk-grid-column-full {
  @include govuk-grid-column(full);
}

.govuk-button--secondary {
  background-color: $notify-secondary-button-colour;

  &:hover {
    background-color: $notify-secondary-button-hover-colour;
  }
}

 // remove default focus styles in favour of those for :before pseudo class
.govuk-summary-list__actions .govuk-link {
  display: block;
  position: relative;

  &:focus {
    box-shadow: none;
  }

  &:before {
    content: "";
    display: block;

    position: absolute;

    top: -1 * govuk-spacing(3);
    right: 0;
    bottom: -1 * govuk-spacing(3) + 4px;
    left: -1 * govuk-spacing(3);

    background: transparent;
  }

  &:focus:before {
    box-shadow: inset 0px -4px $govuk-focus-text-colour, inset 0px 15px $govuk-focus-colour, inset 15px 0px $govuk-focus-colour, inset 0px -11px $govuk-focus-colour;
  }
}


// adjust header navigation menu button positioning for rebrand
// menu button sits height due to taller header
// this centrally aligns is with GOV.UK and product name
// applied only when rebrans is turned on
// remove when we move to service navigation

.govuk-template--rebranded .govuk-header__menu-button {
  @include govuk-media-query($until: desktop) {
    top: 21px;
  }
}


// make 'GOV.UK Notify' logo sit on top of any content below it
// mainly to stop the breadcrumb, which has a negative margin-top,
// overlapping its focus style
.govuk-header__link--homepage:focus {
  position: relative;
  z-index: 1;
}


.govuk-footer__crown {
  display: none;
}

